--- a/blessedImageConfig-master.json
+++ b/blessedImageConfig-master.json
@@ -6,6 +6,7 @@
         "outputImageName": "kudu:master",
         "outputRepoURL": "https://github.com/blessedimagepipeline/kudu.git",
         "outputRepoBranchName": "master",
-        "saveArtifacts": true
+        "saveArtifacts": true,
+        "useCache": true
     }
 ]
